results/SpecGenBench/conversational/log-KthLargest-2023_06_27_16_17_30.txt
import java.util.PriorityQueue;

class KthLargest {
    PriorityQueue<Integer> pq;
    int k;

    /*@ requires k > 0;
      @ requires nums != null;
      @ ensures pq.size() <= k;
      @ ensures (\forall int i; 0 <= i && i < nums.length; pq.contains(nums[i]));
      @*/
    public KthLargest(int k, int[] nums) {
        this.k = k;
        pq = new PriorityQueue<Integer>();
        for (int x : nums) {
            add(x);
        }
    }
    
    /*@ requires true;
      @ ensures pq.size() <= k;
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
      @*/
    public int add(int val) {
        pq.offer(val);
        if (pq.size() > k) {
            pq.poll();
        }
        return pq.peek();
    }
}
/home/max/Documents/JMLGPT/tmp/KthLargest.java:9: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures pq.size() <= k;
                ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:10: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures (\forall int i; 0 <= i && i < nums.length; pq.contains(nums[i]));
                                                           ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures pq.size() <= k;
                ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:21: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures pq.size() <= k;
                             ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
                                ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
                                             ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
                                                   ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:22: error: An identifier with package visibility may not be used in a ensures clause with public visibility
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
                                                                ^
/home/max/Documents/JMLGPT/tmp/KthLargest.java:22: error: bad operand types for binary operator '>='
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
                                                             ^
  first type:  Integer
  second type: Object
9 errors

import java.util.PriorityQueue;

class KthLargest {
    /*@ spec_public @*/ PriorityQueue<Integer> pq;
    /*@ spec_public @*/ int k;

    /*@ requires k > 0;
      @ requires nums != null;
      @ ensures pq.size() <= k;
      @ ensures (\forall int i; 0 <= i && i < nums.length; pq.contains(nums[i]));
      @*/
    public KthLargest(int k, int[] nums) {
        this.k = k;
        pq = new PriorityQueue<Integer>();
        for (int x : nums) {
            add(x);
        }
    }
    
    /*@ requires true;
      @ ensures pq.size() <= k;
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
      @*/
    public int add(int val) {
        pq.offer(val);
        if (pq.size() > k) {
            pq.poll();
        }
        return pq.peek();
    }
}
/home/max/Documents/JMLGPT/tmp/KthLargest.java:22: error: bad operand types for binary operator '>='
      @ ensures (\forall int i; pq.size() == k ==> pq.peek() >= pq.toArray()[i]);
                                                             ^
  first type:  Integer
  second type: Object
1 error

